# RaytraceTuto

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Color.cpp  Color.hpp  Constant.hpp  Geometry.cpp  Geometry.hpp  HitPoint.hpp  Material.cpp  Material.hpp  Ray.cpp  Ray.hpp  Sphere.cpp  Sphere.hpp  Vector.cpp  Vector.hpp  XorShift.cpp  XorShift.hpp  raytracer.cpp  raytracer.hpp
